syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcCommon";

package GrpcCommon;


service Meeting 
{
	rpc Connect(ConnectRequest) returns (ConnectResponse);

	rpc MessagesSubscribe(google.protobuf.Empty) returns (stream MessageFromLobby);
	rpc SendMessage(MessageRequest) returns (google.protobuf.Empty);

	rpc CameraCaptureSubscribe(google.protobuf.Empty) returns (stream CameraCapture);
	rpc SendCameraFrame(CameraCapture) returns (google.protobuf.Empty);
}

message ConnectRequest
{
	string username = 1;
}

message ConnectResponse
{
	bool isSuccessfully = 1;
	string errorMessage = 2;
	string guid = 3;
}

message CameraCapture
{
	string userGuid = 1;
	bytes captureFrame = 2;
}

message MessageRequest 
{
	string userGuid = 1;
	string messageGuid = 2;
	string message = 3;
}

message MessageResponse 
{
	string messageGuid = 1;
	google.protobuf.Timestamp time = 2;
}

message MessageFromLobby
{
	string username = 1;
	string messageGuid = 2;
	string message = 3;
	google.protobuf.Timestamp time = 4;
	// TODO : Temporary
	string userGuid = 5;

}
